# paperpipe

./: .gitignore  AGENTS.md  AGENT_INTEGRATION.md  Makefile  README.md  REFACTOR_PLAN.md  ROADMAP.md  _config.yml  cliff.toml  paperpipe.py  paperqa_mcp_server.py  pyproject.toml  test_paperpipe.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github  /: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/agent/: architecture.md  code_conventions.md  releases.md  testing_patterns.md  workflow.md
paperpipe/: __init__.py  cli.py  config.py  core.py  install.py  leann.py  matching.py  output.py  paper.py  paperqa.py  paperqa_mcp_server.py  search.py
paperpipe/cli/: __init__.py  ask.py  export.py  index.py  papers.py  rebuild.py  search_cli.py  system.py
prompts/claude/: papi.md
prompts/codex/: papi.md
prompts/gemini/: papi-search.toml  papi.toml
scripts/: build.sh  deps.sh  generate_release_notes.sh  release.sh
scripts/hooks/: commit-msg
skill/: SKILL.md  commands.md
skills/papi/: SKILL.md  commands.md
skills/papi-ask/: SKILL.md
skills/papi-compare/: SKILL.md
skills/papi-curate/: SKILL.md
skills/papi-ground/: SKILL.md
skills/papi-init/: SKILL.md
skills/papi-verify/: SKILL.md
skills/papi/references/: commands.md
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_figure_extraction.py  test_leann.py  test_matching.py  test_paper.py  test_paperqa.py  test_search.py
tests/cli/: conftest.py  test_ask.py  test_ask_leann.py  test_export.py  test_index.py  test_integration.py  test_models.py  test_papers.py  test_rebuild.py  test_search.py  test_system.py
