[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperpipe"
version = "0.1.0"
description = "Unified paper database for coding agents + PaperQA2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Matthias Humt" }
]
keywords = [
    "arxiv",
    "papers",
    "research",
    "llm",
    "coding-agent",
    "paperqa",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "arxiv>=2.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
llm = [
    "llm>=0.13.0",  # Simon Willison's llm CLI
]
paperqa = [
    "paper-qa>=5.0.0; python_version >= '3.11'",
]
paperqa-media = [
    "paper-qa[pypdf-media]>=5.0.0; python_version >= '3.11'",
]
all = [
    "paperpipe[llm,paperqa,paperqa-media]",
]
dev = [
    "build>=1.0.0",
    "pyright>=1.1.385",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "twine>=5.0.0",
]

[dependency-groups]
dev = [
    "build>=1.0.0",
    "pyright>=1.1.385",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "twine>=5.0.0",
]

[project.scripts]
papi = "paperpipe:cli"

[project.urls]
Homepage = "https://github.com/hummat/paperpipe"
Documentation = "https://github.com/hummat/paperpipe#readme"
Repository = "https://github.com/hummat/paperpipe"

[tool.hatch.build.targets.wheel]
only-include = ["paperpipe.py", "README.md", "LICENSE", "AGENT_INTEGRATION.md"]

[tool.hatch.build.targets.sdist]
only-include = ["paperpipe.py", "pyproject.toml", "README.md", "LICENSE", "AGENT_INTEGRATION.md"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require network/external services)",
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
include = ["paperpipe.py", "test_paperpipe.py"]
exclude = ["__pycache__", ".git", ".venv", "build", "dist", ".pytest_cache", ".ruff_cache"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
reportMissingTypeStubs = "none"
venvPath = "."
venv = ".venv"
